--- a/back_end/package.json
+++ b/back_end/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.3.1",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sync-mysql": "^3.0.1",
+    "sync-sql": "^1.0.2"
   }
 }
