--- a/back_end/package.json
+++ b/back_end/package.json
@@ -12,6 +12,7 @@
     "async-mutex": "^0.3.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "sync-mysql": "^3.0.1",
